fix login page content alignment

--- a/php/style.css
+++ b/php/style.css
@@ -224,6 +224,8 @@ footer div a:hover{
 
 /* PARTIE CONNEXION UTILISATEUR =====================================================================================================*/
 form {
+    display: flex;
+    flex-direction: column;
     height: 560px;
     width: 420px;
     background-color: rgba(255, 255, 255, 0.13);
